@@ -43,6 +43,7 @@
 	* Bump version to 1.7.0
 	* The version of shared library now has similar scheme as libunbound.
 	  ldns 1.7.0 will have shared library version (SONAME) 2.0.0
+	* bugfix #521: drill trace continue on empty non-terminals with NSEC3
 
 1.6.16	2012-11-13
 	* Fix Makefile to build pyldns with BSD make
